force-app/main/default/objects/Plan_Detail__c/Plan_Detail__c.object-meta.xml
<CustomObject>
    <description>Stores a single plan's input data within a saved comparison session.</description>
    <label>Plan Detail</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>