force-app/main/default/objects/Plan_Detail__c/fields/Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>Coinsurance__c</fullName>
    <description>Coinsurance percentage.</description>
    <label>Coinsurance</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>