force-app/main/default/objects/Plan_Detail__c/fields/Copay_ER__c.field-meta.xml
<CustomField>
    <fullName>Copay_ER__c</fullName>
    <description>Emergency room copay.</description>
    <label>Copay ER</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>