force-app/main/default/objects/Plan_Detail__c/fields/Copay_Inpatient__c.field-meta.xml
<CustomField>
    <fullName>Copay_Inpatient__c</fullName>
    <description>Inpatient copay per admission.</description>
    <label>Copay Inpatient</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>