force-app/main/default/objects/Plan_Detail__c/fields/Copay_Mental_Health__c.field-meta.xml
<CustomField>
    <fullName>Copay_Mental_Health__c</fullName>
    <description>Mental health visit copay.</description>
    <label>Copay Mental Health</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>