force-app/main/default/objects/Plan_Detail__c/fields/Copay_PCP__c.field-meta.xml
<CustomField>
    <fullName>Copay_PCP__c</fullName>
    <description>PCP visit copay.</description>
    <label>Copay PCP</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>