force-app/main/default/objects/Plan_Detail__c/fields/Copay_Prenatal__c.field-meta.xml
<CustomField>
    <fullName>Copay_Prenatal__c</fullName>
    <description>Prenatal care copay.</description>
    <label>Copay Prenatal</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>