force-app/main/default/objects/Plan_Detail__c/fields/Copay_Preventive__c.field-meta.xml
<CustomField>
    <fullName>Copay_Preventive__c</fullName>
    <description>Preventive care copay.</description>
    <label>Copay Preventive</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>