force-app/main/default/objects/Plan_Detail__c/fields/Copay_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Copay_Specialist__c</fullName>
    <description>Specialist visit copay.</description>
    <label>Copay Specialist</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>