force-app/main/default/objects/Plan_Detail__c/fields/Copay_Urgent_Care__c.field-meta.xml
<CustomField>
    <fullName>Copay_Urgent_Care__c</fullName>
    <description>Urgent care copay.</description>
    <label>Copay Urgent Care</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>