force-app/main/default/objects/Plan_Detail__c/fields/Copay_Virtual_Primary__c.field-meta.xml
<CustomField>
    <fullName>Copay_Virtual_Primary__c</fullName>
    <description>Virtual primary care copay.</description>
    <label>Copay Virtual Primary</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>