force-app/main/default/objects/Plan_Detail__c/fields/Copay_Xray_Lab__c.field-meta.xml
<CustomField>
    <fullName>Copay_Xray_Lab__c</fullName>
    <description>X-Ray / Lab Work copay.</description>
    <label>Copay Xray Lab</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>