force-app/main/default/objects/Plan_Detail__c/fields/Deductible__c.field-meta.xml
<CustomField>
    <fullName>Deductible__c</fullName>
    <description>Annual deductible amount (individual or family — whichever applies to the member).</description>
    <label>Deductible</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>