force-app/main/default/objects/Plan_Detail__c/fields/Employer_HSA__c.field-meta.xml
<CustomField>
    <fullName>Employer_HSA__c</fullName>
    <description>Employer HSA contribution.</description>
    <label>Employer HSA</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>