force-app/main/default/objects/Plan_Detail__c/fields/FSA__c.field-meta.xml
<CustomField>
    <fullName>FSA__c</fullName>
    <description>FSA contribution.</description>
    <label>FSA</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>