force-app/main/default/objects/Plan_Detail__c/fields/HSA__c.field-meta.xml
<CustomField>
    <fullName>HSA__c</fullName>
    <description>Personal HSA contribution.</description>
    <label>HSA</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>