force-app/main/default/objects/Plan_Detail__c/fields/Is_HDHP__c.field-meta.xml
<CustomField>
    <fullName>Is_HDHP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this plan is a High Deductible Health Plan.</description>
    <label>Is HDHP</label>
    <type>Checkbox</type>
</CustomField>