force-app/main/default/objects/Plan_Detail__c/fields/LPFSA__c.field-meta.xml
<CustomField>
    <fullName>LPFSA__c</fullName>
    <description>Limited Purpose FSA contribution.</description>
    <label>LPFSA</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>