force-app/main/default/objects/Plan_Detail__c/fields/OOPM__c.field-meta.xml
<CustomField>
    <fullName>OOPM__c</fullName>
    <description>Out-of-pocket maximum for Basic mode.</description>
    <label>OOPM</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>