force-app/main/default/objects/Plan_Detail__c/fields/Plan_Comparison__c.field-meta.xml
<CustomField>
    <fullName>Plan_Comparison__c</fullName>
    <description>Master-detail relationship to the parent comparison session.</description>
    <label>Plan Comparison</label>
    <referenceTo>Plan_Comparison__c</referenceTo>
    <relationshipLabel>Plan Details</relationshipLabel>
    <relationshipName>Plan_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>