force-app/main/default/objects/Plan_Detail__c/fields/Plan_Order__c.field-meta.xml
<CustomField>
    <fullName>Plan_Order__c</fullName>
    <description>Order of this plan in the comparison (1-5).</description>
    <label>Plan Order</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>