force-app/main/default/objects/Plan_Detail__c/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <description>Premium amount per pay period.</description>
    <label>Premium</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>