force-app/main/default/objects/Plan_Detail__c/fields/Rx_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Rx_Deductible__c</fullName>
    <description>Annual Rx deductible.</description>
    <label>Rx Deductible</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>