force-app/main/default/objects/Plan_Detail__c/fields/Rx_Generic__c.field-meta.xml
<CustomField>
    <fullName>Rx_Generic__c</fullName>
    <description>Generic drug copay per fill.</description>
    <label>Rx Generic</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>