force-app/main/default/objects/Plan_Detail__c/fields/Rx_Non_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Rx_Non_Preferred__c</fullName>
    <description>Non-preferred drug copay per fill.</description>
    <label>Rx Non Preferred</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>