force-app/main/default/objects/Plan_Detail__c/fields/Rx_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Rx_Preferred__c</fullName>
    <description>Preferred drug copay per fill.</description>
    <label>Rx Preferred</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>