force-app/main/default/objects/Plan_Detail__c/fields/Rx_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Rx_Specialty__c</fullName>
    <description>Specialty drug copay per fill.</description>
    <label>Rx Specialty</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>